<resources>
    <string name="app_name">t4a2_example</string>
    <string name="posicion_global">POSICION GLOBAL</string>
    <string name="movimientos">MOVIMIENTOS</string>
    <string name="transferencias">TRANSFERENCIAS</string>
    <string name="cambiar_contrase_a">CAMBIAR CONTRASEÑA</string>
    <string name="promociones">PROMOCIONES</string>
    <string name="cajeros">CAJEROS</string>
    <string name="salir">SALIR</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="settings">Configuración</string>
    <string name="multimedia">Multimedia</string>
    <string name="musica">Música</string>
    <string name="musicaOn">Escuchar la música mientras se ejecuta la aplicación</string>
    <string name="musicaOff">No escuchar la música mientras se ejecuta la aplicación</string>
    <string name="video">Video de Bienvenida\n</string>
    <string name="videoOff">No reproducir un video al iniciar la aplicacion\n</string>
    <string name="videoOn">Reproducir un video al iniciar la aplicacion\n</string>
    <string name="idioma">Idioma</string>
    <string name="indicarIdioma">Indicar Idioma</string>
    <string name="datos">Datos</string>

    <string-array name="datos">
        <item>Base de datos local </item>
        <item>Servicio web</item>
    </string-array>
    <string-array name="idioma">
        <item>Español</item>
        <item>Frances</item>
        <item>Aleman</item>
    </string-array>
    <string-array name="codigopais">
        <item>ESP</item>
        <item>FRA</item>
        <item>ALE</item>
    </string-array>
    <string-array name="numeros_cuentas">
        <item>ES23 2342 2342 2342</item>
        <item>ES45 5678 5678 5678</item>
        <item>ES67 1234 1234 1234</item>
        <item>ES89 9876 9876 9876</item>
    </string-array>

    <string-array name="numeros_cuentas2">
        <item>ES12 3456 7890 1234</item>
        <item>ES34 5678 9012 3456</item>
        <item>ES56 7890 1234 5678</item>
        <item>ES78 9012 3456 7890</item>
    </string-array>

    <string-array name="strdivisas">
        <item>$</item>
        <item>€</item>
    </string-array>
</resources>